# pausable-udt

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  deployment.toml
contracts/pausable-udt/: Cargo.toml  README.md  extra.mol
contracts/pausable-udt/src/: config.rs  error.rs  fallback.rs  main.rs  modules.rs  molecule.rs  utils.rs
contracts/pausable-udt/tests/: Cargo.toml
contracts/pausable-udt/tests/src/: lib.rs  ssri.rs  tests.rs  tool.rs  utils.rs
