[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-testtool = "0.14.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros"] }  # Required for async tests
ckb-hash = "0.116.1"
ckb-std = { version = "0.16.4", features = [] }
ckb_ssri_sdk = { path = "../ckb_ssri_sdk" }
serde_molecule = { version = "1.1.0", default-features = false, features = ["alloc"] }